fix: fixing words

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "*1. What is our independent variable? What is our dependent variable?*\n",
     "\n",
-    "As the data contains only the duration of each experiments; thus, the **dependent variable** will be the **naming duration**. In the other hand, the **independent variable** will be the **experiment itself (the color of the text)**.\n",
+    "As the data contains only the duration of each experiments; thus, the **dependent variable** will be the **each task per**. In the other hand, the **independent variable** will be the **experiment itself (the color of the text)**.\n",
     "\n",
     "*2. What is an appropriate set of hypotheses for this task? What kind of statistical test do you expect to perform? Justify your choices.*\n",
     "\n",
